syntax = "proto3";

option go_package = "github.com/DeTiveNC/commons/api";

package api;

message Order {
  string ID = 1;
  string CustomerID = 2;
  string Status = 3;
  repeated Item Items = 4;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
}

message Item {
  string ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PriceID = 4;
}

message ItemsWithQuatity {
  string ID = 1;
  int32 Quantity = 2;
}

message CreateOrderRequest {
  string customerID = 1;
  repeated ItemsWithQuatity items = 2;
}
